# keeplin-srv

./: .dockerignore  .env.example  .env.example.md  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.md  README.md  RUNBOOK.md  SECURITY.md  docker-compose.yml  docker-compose.yml.md
.cargo/: audit.toml
.claude/: settings.example.json
.githooks/: pre-commit  pre-commit.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: finding.md
.github/workflows/: ci.yml  ci.yml.md
crates/keeplin-srv/: Cargo.toml
crates/keeplin-srv/src/: auth.md  auth.rs  bus.md  bus.rs  collab.md  collab.rs  config.md  config.rs  crypto.md  crypto.rs  error.md  error.rs  http.md  http.rs  lib.md  lib.rs  lines.rs  mail.md  mail.rs  main.md  main.rs  permissions.md  permissions.rs  positions.rs  protocol.md  protocol.rs  ratelimit.md  ratelimit.rs  reencrypt.md  reencrypt.rs  state.md  state.rs  store.md  store.rs  sync.md  sync.rs  websocket.rs
crates/keeplin-srv/tests/: collab.md  collab.rs  collab_client_e2e.md  collab_client_e2e.rs  collab_client_reconnect_e2e.md  collab_client_reconnect_e2e.rs  collab_client_resources_e2e.md  collab_client_resources_e2e.rs  integration.md  integration.rs  materialize.md  materialize.rs  quotas.md  quotas.rs  reencrypt.md  reencrypt.rs  soak.md  soak.rs
crates/keeplin-srv/tests/collab_e2e_common/: mod.md  mod.rs
docs/templates/: README.md  config-file.md  crate-root.md  design-doc.md  source-module.md  test-file.md
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  graph.json
legacy/: package-lock.json  package.json
legacy/src/: auth.ts  config.ts  index.test.ts  index.ts  server.ts  store.ts  types.ts  websocket.ts
migrations/: 0001_initial.md  0001_initial.sql  0002_collab.md  0002_collab.sql  0003_note_metadata.md  0003_note_metadata.sql  0004_domain_entities.md  0004_domain_entities.sql  0005_permissions.md  0005_permissions.sql  0006_notebook_permissions.md  0006_notebook_permissions.sql  0007_per_user_batch_dedup.md  0007_per_user_batch_dedup.sql  0008_changes_history_index.md  0008_changes_history_index.sql  0009_changes_entity_index.md  0009_changes_entity_index.sql  0010_collab_bus.md  0010_collab_bus.sql  0011_login_attempts.md  0011_login_attempts.sql  0012_email_flows.md  0012_email_flows.sql  0013_try_timestamptz.md  0013_try_timestamptz.sql  0014_tag_system.md  0014_tag_system.sql  0015_resource_media_meta.md  0015_resource_media_meta.sql  0016_resource_note_id.md  0016_resource_note_id.sql
scripts/: check-docs.sh  check-docs.sh.md  check-graph.sh  check-graph.sh.md  dr-drill.sh  dr-drill.sh.md
