[package]
name = "keeplin-srv"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
jsonwebtoken = "9"
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "migrate",
    "uuid",
    "chrono",
] }
# Reuses the version-vector conflict resolution (`note_log::resolve`) so the
# collaborative line editing converges exactly like keeplin-core entities.
# Pinned to a specific commit for reproducible builds: an unpinned git dep would
# silently follow keeplin's default branch and could break the wire protocol
# without a code change here (issue #28).
#
# Bump process: set `rev` to the keeplin release you are adopting, then run the
# full test suite (the materialisation path in sync.rs depends on keeplin-core's
# `Change` model and `note_log::resolve`). When keeplin publishes git tags, prefer
# `tag = "vX.Y.Z"` over a bare commit. This rev is keeplin main + the GET /version
# protocol handshake (compat.rs; CollabBackend::start now returns Result) + the
# out-of-band resource blob upload fix (eager metadata push before PUT).
keeplin-core = { git = "https://github.com/jsunyermias/keeplin.git", rev = "85c129b1bade8653ef32f06dafa87b6a163de2d7" }
argon2 = "0.5"
password-hash = "0.5"
# At-rest encryption of note content/title (issue keeplin#110). AES-256-GCM with
# a per-value random nonce; key from the AT_REST_KEY env var.
aes-gcm = "0.10"
base64 = "0.22"
# Email-flow tokens are stored hashed (issue #49); reqwest posts the payload to
# the operator's mail webhook (keeplin never speaks SMTP).
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "1"
dotenvy = "0.15"
async-trait = "0.1"
futures-util = "0.3"

[dev-dependencies]
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
